[tool.poetry]
name = "recipe-finder-agent"
version = "0.1.0"
description = ""
authors = ["Ekanant Phanuwatyingyong <ekanant2535@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.9.1"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "4.2.0"
async-timeout = "4.0.3"
attrs = "23.2.0"
azure-common = "1.1.28"
azure-core = "1.29.7"
azure-identity = "1.15.0"
azure-search-documents = "11.4.0b8"
cachetools = "5.3.2"
certifi = "2023.11.17"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cryptography = "42.0.1"
dataclasses-json = "0.6.3"
distro = "1.9.0"
dnspython = "2.5.0"
email-validator = "2.1.0.post1"
exceptiongroup = "1.2.0"
fastapi = "0.109.0"
frozenlist = "1.4.1"
google-ai-generativelanguage = "0.4.0"
google-api-core = "2.15.0"
google-auth = "2.27.0"
google-generativeai = "0.3.2"
googleapis-common-protos = "1.62.0"
grpcio = "1.60.0"
grpcio-status = "1.60.0"
h11 = "0.14.0"
httpcore = "1.0.2"
httptools = "0.6.1"
httpx = "0.26.0"
idna = "3.6"
isodate = "0.6.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
jsonpatch = "1.33"
jsonpointer = "2.4"
langchain = "0.1.3"
langchain-community = "0.0.15"
langchain-core = "0.1.15"
langchain-google-genai = "0.0.6"
langchain-openai = "0.0.3"
langsmith = "0.0.83"
markupsafe = "2.1.4"
marshmallow = "3.20.2"
msal = "1.26.0"
msal-extensions = "1.1.0"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
numpy = "1.26.3"
openai = "1.9.0"
orjson = "3.9.12"
packaging = "23.2"
portalocker = "2.8.2"
proto-plus = "1.23.0"
protobuf = "4.25.2"
pyasn1 = "0.5.1"
pyasn1-modules = "0.3.0"
pycparser = "2.21"
pydantic = "2.5.3"
pydantic-extra-types = "2.4.1"
pydantic-settings = "2.1.0"
pydantic-core = "2.14.6"
pyjwt = "2.8.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.6"
pyyaml = "6.0.1"
regex = "2023.12.25"
requests = "2.31.0"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.25"
starlette = "0.35.1"
tenacity = "8.2.3"
tiktoken = "0.5.2"
tqdm = "4.66.1"
typing-inspect = "0.9.0"
typing-extensions = "4.9.0"
ujson = "5.9.0"
urllib3 = "2.1.0"
uvicorn = "0.27.0"
uvloop = "0.19.0"
watchfiles = "0.21.0"
websockets = "12.0"
yarl = "1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
